// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrderLedger Component OrderLedger should render correctly 1`] = `
<div
  className=" elem-mb-MED"
>
  <Styled(Col)
    colSize={
      Object {
        "large": 12,
        "medium": 8,
        "small": 6,
      }
    }
    ignoreGutter={
      Object {
        "small": true,
      }
    }
  >
    <Styled(CollapsibleContainer)
      body={
        <React.Fragment>
          <ForwardRef(Styled(Grid))
            className=" elem-mb-MED"
            data-locator="orderLedgerBox"
          >
            <ForwardRef(Styled(Row))
              className="items-total rowMargin"
              data-locator="orderLedgerItemLbl"
            >
              <ForwardRef(Styled(Col))
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef(Styled(BodyCopy))
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  dataLocator="orderLedgerCount"
                  fontFamily="secondary"
                  fontSize="fs16"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="left"
                >
                  undefined (1):
                </ForwardRef(Styled(BodyCopy))>
              </ForwardRef(Styled(Col))>
              <ForwardRef(Styled(Col))
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef(Styled(BodyCopy))
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs16"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="right"
                >
                  0.00
                </ForwardRef(Styled(BodyCopy))>
              </ForwardRef(Styled(Col))>
            </ForwardRef(Styled(Row))>
            <ForwardRef(Styled(Row))
              className="tax-total rowMargin"
              data-locator="orderLedgerTaxLbl"
            >
              <ForwardRef(Styled(Col))
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef(Styled(BodyCopy))
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs16"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  tag="span"
                  textAlign="left"
                >
                  undefined:
                </ForwardRef(Styled(BodyCopy))>
              </ForwardRef(Styled(Col))>
              <ForwardRef(Styled(Col))
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef(Styled(BodyCopy))
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs16"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="right"
                >
                  0.00
                </ForwardRef(Styled(BodyCopy))>
              </ForwardRef(Styled(Col))>
            </ForwardRef(Styled(Row))>
            <ForwardRef(Styled(Row))
              className="balance-total rowMargin"
              data-locator="orderLedgerBalanceTotalLbl"
            >
              <ForwardRef(Styled(Col))
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef(Styled(BodyCopy))
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs18"
                  fontWeight="extrabold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  tag="span"
                  textAlign="left"
                >
                  undefined:
                </ForwardRef(Styled(BodyCopy))>
              </ForwardRef(Styled(Col))>
              <ForwardRef(Styled(Col))
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef(Styled(BodyCopy))
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs18"
                  fontWeight="extrabold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  tag="span"
                  textAlign="right"
                >
                  0.00
                </ForwardRef(Styled(BodyCopy))>
              </ForwardRef(Styled(Col))>
            </ForwardRef(Styled(Row))>
            <Connect(FreeShippingBannerContainer) />
            <Connect(LoyaltyBannerContainer)
              pageCategory=""
            />
          </ForwardRef(Styled(Grid))>
          <Measure
            name="pricing_visible"
          />
        </React.Fragment>
      }
      className=""
      defaultOpen={false}
      header={
        <div
          className="elem-mb-SM order-ledger-header"
        >
          <ForwardRef(Styled(BodyCopy))
            className={null}
            color="text.primary"
            component="span"
            fontFamily="secondary"
            fontSize="fs16"
            fontWeight="semibold"
            letterSpacing="normal"
            lineHeight="normal"
            link={null}
            textAlign="left"
          >
            undefined (0)
          </ForwardRef(Styled(BodyCopy))>
        </div>
      }
      iconLocator="arrowicon"
      isDefaultView={true}
    />
  </Styled(Col)>
</div>
`;

exports[`OrderLedger Component OrderLedger should render correctly 2`] = `
<div
  className=" elem-mb-MED"
>
  <Styled(Col)
    colSize={
      Object {
        "large": 12,
        "medium": 8,
        "small": 6,
      }
    }
    ignoreGutter={
      Object {
        "small": true,
      }
    }
  >
    <Styled(CollapsibleContainer)
      body={
        <React.Fragment>
          <ForwardRef(Styled(Grid))
            className=" elem-mb-MED"
            data-locator="orderLedgerBox"
          >
            <ForwardRef(Styled(Row))
              className="items-total rowMargin"
              data-locator="orderLedgerItemLbl"
            >
              <ForwardRef(Styled(Col))
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef(Styled(BodyCopy))
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  dataLocator="orderLedgerCount"
                  fontFamily="secondary"
                  fontSize="fs16"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="left"
                >
                  undefined (1):
                </ForwardRef(Styled(BodyCopy))>
              </ForwardRef(Styled(Col))>
              <ForwardRef(Styled(Col))
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef(Styled(BodyCopy))
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs16"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="right"
                >
                  1.00
                </ForwardRef(Styled(BodyCopy))>
              </ForwardRef(Styled(Col))>
            </ForwardRef(Styled(Row))>
            <ForwardRef(Styled(Row))
              className="coupons-total rowMargin"
              data-locator="orderLedgerCouponsLbl"
            >
              <ForwardRef(Styled(Col))
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef(Styled(BodyCopy))
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs13"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="left"
                >
                  undefined:
                </ForwardRef(Styled(BodyCopy))>
              </ForwardRef(Styled(Col))>
              <ForwardRef(Styled(Col))
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef(Styled(BodyCopy))
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs13"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="right"
                >
                  -1.00
                </ForwardRef(Styled(BodyCopy))>
              </ForwardRef(Styled(Col))>
            </ForwardRef(Styled(Row))>
            <ForwardRef(Styled(Row))
              className="promotions-total rowMargin"
              data-locator="orderLedgerPromotionLbl"
            >
              <ForwardRef(Styled(Col))
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef(Styled(BodyCopy))
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs13"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="left"
                >
                  undefined:
                </ForwardRef(Styled(BodyCopy))>
              </ForwardRef(Styled(Col))>
              <ForwardRef(Styled(Col))
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef(Styled(BodyCopy))
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs13"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="right"
                >
                  -1.00
                </ForwardRef(Styled(BodyCopy))>
              </ForwardRef(Styled(Col))>
            </ForwardRef(Styled(Row))>
            <ForwardRef(Styled(Row))
              className="shipping-total rowMargin"
            >
              <ForwardRef(Styled(Col))
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef(Styled(BodyCopy))
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs16"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="left"
                >
                  undefined:
                </ForwardRef(Styled(BodyCopy))>
              </ForwardRef(Styled(Col))>
              <ForwardRef(Styled(Col))
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef(Styled(BodyCopy))
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs16"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="right"
                >
                  1.00
                </ForwardRef(Styled(BodyCopy))>
              </ForwardRef(Styled(Col))>
            </ForwardRef(Styled(Row))>
            <ForwardRef(Styled(Row))
              className="shipping-total rowMargin"
              data-locator="orderLedgerShippingLbl"
            >
              <ForwardRef(Styled(Col))
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef(Styled(BodyCopy))
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs16"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="left"
                >
                  undefined:
                </ForwardRef(Styled(BodyCopy))>
              </ForwardRef(Styled(Col))>
              <ForwardRef(Styled(Col))
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef(Styled(BodyCopy))
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs16"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="right"
                >
                  1.00
                </ForwardRef(Styled(BodyCopy))>
              </ForwardRef(Styled(Col))>
            </ForwardRef(Styled(Row))>
            <ForwardRef(Styled(Row))
              className="tax-total rowMargin"
              data-locator="orderLedgerTaxLbl"
            >
              <ForwardRef(Styled(Col))
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef(Styled(BodyCopy))
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs16"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  tag="span"
                  textAlign="left"
                >
                  undefined:
                </ForwardRef(Styled(BodyCopy))>
              </ForwardRef(Styled(Col))>
              <ForwardRef(Styled(Col))
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef(Styled(BodyCopy))
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs16"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="right"
                >
                  1.00
                </ForwardRef(Styled(BodyCopy))>
              </ForwardRef(Styled(Col))>
            </ForwardRef(Styled(Row))>
            <React.Fragment>
              <ForwardRef(Styled(Row))
                className="estimated-total rowMargin"
                data-locator="orderLedgerTotalLbl"
              >
                <ForwardRef(Styled(Col))
                  colSize={
                    Object {
                      "large": 6,
                      "medium": 4,
                      "small": 3,
                    }
                  }
                >
                  <ForwardRef(Styled(BodyCopy))
                    bodySize="one"
                    className={null}
                    color="primary"
                    component="p"
                    fontFamily="secondary"
                    fontSize="fs13"
                    fontWeight="semibold"
                    letterSpacing="normal"
                    lineHeight="normal"
                    link={null}
                    textAlign="left"
                  >
                    undefined:
                  </ForwardRef(Styled(BodyCopy))>
                </ForwardRef(Styled(Col))>
                <ForwardRef(Styled(Col))
                  colSize={
                    Object {
                      "large": 6,
                      "medium": 4,
                      "small": 3,
                    }
                  }
                >
                  <ForwardRef(Styled(BodyCopy))
                    bodySize="one"
                    className={null}
                    color="primary"
                    component="p"
                    fontFamily="secondary"
                    fontSize="fs13"
                    fontWeight="semibold"
                    letterSpacing="normal"
                    lineHeight="normal"
                    link={null}
                    textAlign="right"
                  >
                    1.00
                  </ForwardRef(Styled(BodyCopy))>
                </ForwardRef(Styled(Col))>
              </ForwardRef(Styled(Row))>
              <ForwardRef(Styled(Row))
                className="giftCard-total rowMargin"
                data-locator="orderLedgerGiftCardLbl"
              >
                <ForwardRef(Styled(Col))
                  colSize={
                    Object {
                      "large": 6,
                      "medium": 4,
                      "small": 3,
                    }
                  }
                >
                  <ForwardRef(Styled(BodyCopy))
                    bodySize="one"
                    className={null}
                    color="primary"
                    component="p"
                    fontFamily="secondary"
                    fontSize="fs13"
                    fontWeight="semibold"
                    letterSpacing="normal"
                    lineHeight="normal"
                    link={null}
                    textAlign="left"
                  >
                    undefined:
                  </ForwardRef(Styled(BodyCopy))>
                </ForwardRef(Styled(Col))>
                <ForwardRef(Styled(Col))
                  colSize={
                    Object {
                      "large": 6,
                      "medium": 4,
                      "small": 3,
                    }
                  }
                >
                  <ForwardRef(Styled(BodyCopy))
                    bodySize="one"
                    className={null}
                    color="primary"
                    component="p"
                    fontFamily="secondary"
                    fontSize="fs13"
                    fontWeight="semibold"
                    letterSpacing="normal"
                    lineHeight="normal"
                    link={null}
                    textAlign="right"
                  >
                    -1.00
                  </ForwardRef(Styled(BodyCopy))>
                </ForwardRef(Styled(Col))>
              </ForwardRef(Styled(Row))>
            </React.Fragment>
            <ForwardRef(Styled(Row))
              className="balance-total rowMargin"
              data-locator="orderLedgerBalanceTotalLbl"
            >
              <ForwardRef(Styled(Col))
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef(Styled(BodyCopy))
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs18"
                  fontWeight="extrabold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  tag="span"
                  textAlign="left"
                >
                  undefined:
                </ForwardRef(Styled(BodyCopy))>
              </ForwardRef(Styled(Col))>
              <ForwardRef(Styled(Col))
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef(Styled(BodyCopy))
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs18"
                  fontWeight="extrabold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  tag="span"
                  textAlign="right"
                >
                  1.00
                </ForwardRef(Styled(BodyCopy))>
              </ForwardRef(Styled(Col))>
            </ForwardRef(Styled(Row))>
            <ForwardRef(Styled(Row))
              className="total-order-savings rowMargin"
              data-locator="orderLedgerTotalOrderSavingsLabel"
            >
              <ForwardRef(Styled(Col))
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef(Styled(BodyCopy))
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs16"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="left"
                >
                  undefined
                  <ForwardRef(Styled(ReactTooltip))
                    direction="top"
                    id="tool"
                    minWidth="205px"
                  >
                    <ForwardRef(Styled(Image))
                      alt="info"
                      className="circle-info-image"
                      src="/static/images/info-icon.png"
                    />
                  </ForwardRef(Styled(ReactTooltip))>
                </ForwardRef(Styled(BodyCopy))>
              </ForwardRef(Styled(Col))>
              <ForwardRef(Styled(Col))
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef(Styled(BodyCopy))
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs16"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="right"
                >
                  1.00
                </ForwardRef(Styled(BodyCopy))>
              </ForwardRef(Styled(Col))>
            </ForwardRef(Styled(Row))>
            <Connect(FreeShippingBannerContainer) />
            <Connect(LoyaltyBannerContainer)
              pageCategory=""
            />
          </ForwardRef(Styled(Grid))>
          <Measure
            name="pricing_visible"
          />
        </React.Fragment>
      }
      className=""
      defaultOpen={false}
      header={
        <div
          className="elem-mb-SM order-ledger-header"
        >
          <ForwardRef(Styled(BodyCopy))
            className={null}
            color="text.primary"
            component="span"
            fontFamily="secondary"
            fontSize="fs16"
            fontWeight="semibold"
            letterSpacing="normal"
            lineHeight="normal"
            link={null}
            textAlign="left"
          >
            undefined (1.00)
          </ForwardRef(Styled(BodyCopy))>
        </div>
      }
      iconLocator="arrowicon"
      isDefaultView={true}
    />
  </Styled(Col)>
</div>
`;

exports[`OrderLedger Component on confirmation page OrderLedger on confirmation page should render correctly 1`] = `
<div
  className=" elem-mb-MED"
>
  <Styled(Col)
    colSize={
      Object {
        "large": 12,
        "medium": 8,
        "small": 6,
      }
    }
    ignoreGutter={
      Object {
        "small": true,
      }
    }
  >
    <Styled(CollapsibleContainer)
      body={
        <React.Fragment>
          <ForwardRef(Styled(Grid))
            className=" elem-mb-MED"
            data-locator="orderLedgerBox"
          >
            <ForwardRef(Styled(Row))
              className="items-total rowMargin"
              data-locator="orderLedgerItemLbl"
            >
              <ForwardRef(Styled(Col))
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef(Styled(BodyCopy))
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  dataLocator="orderLedgerCount"
                  fontFamily="secondary"
                  fontSize="fs16"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="left"
                >
                  undefined (1):
                </ForwardRef(Styled(BodyCopy))>
              </ForwardRef(Styled(Col))>
              <ForwardRef(Styled(Col))
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef(Styled(BodyCopy))
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs16"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="right"
                >
                  1.00
                </ForwardRef(Styled(BodyCopy))>
              </ForwardRef(Styled(Col))>
            </ForwardRef(Styled(Row))>
            <ForwardRef(Styled(Row))
              className="coupons-total rowMargin"
              data-locator="orderLedgerCouponsLbl"
            >
              <ForwardRef(Styled(Col))
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef(Styled(BodyCopy))
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs13"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="left"
                >
                  undefined:
                </ForwardRef(Styled(BodyCopy))>
              </ForwardRef(Styled(Col))>
              <ForwardRef(Styled(Col))
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef(Styled(BodyCopy))
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs13"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="right"
                >
                  -1.00
                </ForwardRef(Styled(BodyCopy))>
              </ForwardRef(Styled(Col))>
            </ForwardRef(Styled(Row))>
            <ForwardRef(Styled(Row))
              className="promotions-total rowMargin"
              data-locator="orderLedgerPromotionLbl"
            >
              <ForwardRef(Styled(Col))
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef(Styled(BodyCopy))
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs13"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="left"
                >
                  undefined:
                </ForwardRef(Styled(BodyCopy))>
              </ForwardRef(Styled(Col))>
              <ForwardRef(Styled(Col))
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef(Styled(BodyCopy))
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs13"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="right"
                >
                  -1.00
                </ForwardRef(Styled(BodyCopy))>
              </ForwardRef(Styled(Col))>
            </ForwardRef(Styled(Row))>
            <ForwardRef(Styled(Row))
              className="shipping-total rowMargin"
              data-locator="orderLedgerShippingLbl"
            >
              <ForwardRef(Styled(Col))
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef(Styled(BodyCopy))
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs16"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="left"
                >
                  undefined:
                </ForwardRef(Styled(BodyCopy))>
              </ForwardRef(Styled(Col))>
              <ForwardRef(Styled(Col))
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef(Styled(BodyCopy))
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs16"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="right"
                >
                  1.00
                </ForwardRef(Styled(BodyCopy))>
              </ForwardRef(Styled(Col))>
            </ForwardRef(Styled(Row))>
            <ForwardRef(Styled(Row))
              className="tax-total rowMargin"
              data-locator="orderLedgerTaxLbl"
            >
              <ForwardRef(Styled(Col))
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef(Styled(BodyCopy))
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs16"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  tag="span"
                  textAlign="left"
                >
                  undefined:
                </ForwardRef(Styled(BodyCopy))>
              </ForwardRef(Styled(Col))>
              <ForwardRef(Styled(Col))
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef(Styled(BodyCopy))
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs16"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="right"
                >
                  1.00
                </ForwardRef(Styled(BodyCopy))>
              </ForwardRef(Styled(Col))>
            </ForwardRef(Styled(Row))>
            <React.Fragment>
              <ForwardRef(Styled(Row))
                className="estimated-total rowMargin"
                data-locator="orderLedgerTotalLbl"
              >
                <ForwardRef(Styled(Col))
                  colSize={
                    Object {
                      "large": 6,
                      "medium": 4,
                      "small": 3,
                    }
                  }
                >
                  <ForwardRef(Styled(BodyCopy))
                    bodySize="one"
                    className={null}
                    color="primary"
                    component="p"
                    fontFamily="secondary"
                    fontSize="fs13"
                    fontWeight="semibold"
                    letterSpacing="normal"
                    lineHeight="normal"
                    link={null}
                    textAlign="left"
                  >
                    undefined:
                  </ForwardRef(Styled(BodyCopy))>
                </ForwardRef(Styled(Col))>
                <ForwardRef(Styled(Col))
                  colSize={
                    Object {
                      "large": 6,
                      "medium": 4,
                      "small": 3,
                    }
                  }
                >
                  <ForwardRef(Styled(BodyCopy))
                    bodySize="one"
                    className={null}
                    color="primary"
                    component="p"
                    fontFamily="secondary"
                    fontSize="fs13"
                    fontWeight="semibold"
                    letterSpacing="normal"
                    lineHeight="normal"
                    link={null}
                    textAlign="right"
                  >
                    1.00
                  </ForwardRef(Styled(BodyCopy))>
                </ForwardRef(Styled(Col))>
              </ForwardRef(Styled(Row))>
              <ForwardRef(Styled(Row))
                className="giftCard-total rowMargin"
                data-locator="orderLedgerGiftCardLbl"
              >
                <ForwardRef(Styled(Col))
                  colSize={
                    Object {
                      "large": 6,
                      "medium": 4,
                      "small": 3,
                    }
                  }
                >
                  <ForwardRef(Styled(BodyCopy))
                    bodySize="one"
                    className={null}
                    color="primary"
                    component="p"
                    fontFamily="secondary"
                    fontSize="fs13"
                    fontWeight="semibold"
                    letterSpacing="normal"
                    lineHeight="normal"
                    link={null}
                    textAlign="left"
                  >
                    undefined:
                  </ForwardRef(Styled(BodyCopy))>
                </ForwardRef(Styled(Col))>
                <ForwardRef(Styled(Col))
                  colSize={
                    Object {
                      "large": 6,
                      "medium": 4,
                      "small": 3,
                    }
                  }
                >
                  <ForwardRef(Styled(BodyCopy))
                    bodySize="one"
                    className={null}
                    color="primary"
                    component="p"
                    fontFamily="secondary"
                    fontSize="fs13"
                    fontWeight="semibold"
                    letterSpacing="normal"
                    lineHeight="normal"
                    link={null}
                    textAlign="right"
                  >
                    -1.00
                  </ForwardRef(Styled(BodyCopy))>
                </ForwardRef(Styled(Col))>
              </ForwardRef(Styled(Row))>
            </React.Fragment>
            <ForwardRef(Styled(Row))
              className="balance-total rowMargin"
              data-locator="orderLedgerBalanceTotalLbl"
            >
              <ForwardRef(Styled(Col))
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef(Styled(BodyCopy))
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs18"
                  fontWeight="extrabold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  tag="span"
                  textAlign="left"
                >
                  undefined:
                </ForwardRef(Styled(BodyCopy))>
              </ForwardRef(Styled(Col))>
              <ForwardRef(Styled(Col))
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef(Styled(BodyCopy))
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs18"
                  fontWeight="extrabold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  tag="span"
                  textAlign="right"
                >
                  1.00
                </ForwardRef(Styled(BodyCopy))>
              </ForwardRef(Styled(Col))>
            </ForwardRef(Styled(Row))>
            <ForwardRef(Styled(Row))
              className="total-order-savings rowMargin"
              data-locator="orderLedgerTotalOrderSavingsLabel"
            >
              <ForwardRef(Styled(Col))
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef(Styled(BodyCopy))
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs16"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="left"
                >
                  undefined
                  <ForwardRef(Styled(ReactTooltip))
                    direction="top"
                    id="tool"
                    minWidth="205px"
                  >
                    <ForwardRef(Styled(Image))
                      alt="info"
                      className="circle-info-image"
                      src="/static/images/info-icon.png"
                    />
                  </ForwardRef(Styled(ReactTooltip))>
                </ForwardRef(Styled(BodyCopy))>
              </ForwardRef(Styled(Col))>
              <ForwardRef(Styled(Col))
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef(Styled(BodyCopy))
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs16"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="right"
                >
                  1.00
                </ForwardRef(Styled(BodyCopy))>
              </ForwardRef(Styled(Col))>
            </ForwardRef(Styled(Row))>
            <Connect(FreeShippingBannerContainer) />
            <Connect(LoyaltyBannerContainer)
              pageCategory=""
            />
          </ForwardRef(Styled(Grid))>
          <Measure
            name="pricing_visible"
          />
        </React.Fragment>
      }
      className=""
      defaultOpen={false}
      header={
        <div
          className="elem-mb-SM order-ledger-header"
        >
          <ForwardRef(Styled(BodyCopy))
            className={null}
            color="text.primary"
            component="span"
            fontFamily="secondary"
            fontSize="fs16"
            fontWeight="semibold"
            letterSpacing="normal"
            lineHeight="normal"
            link={null}
            textAlign="left"
          >
            undefined (1.00)
          </ForwardRef(Styled(BodyCopy))>
        </div>
      }
      iconLocator="arrowicon"
      isDefaultView={true}
    />
  </Styled(Col)>
</div>
`;
